--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-
-<app-header></app-header>
-<H1>{{ title }}</H1>
-<app-footer></app-footer>
+<body class="d-flex flex-column vh-100">
+    <app-header></app-header>
+    <app-sections></app-sections>
+    <app-footer></app-footer>
+</body>
