--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
-<body class="d-flex flex-column vh-100">
-    <app-header></app-header>
-    <app-sections></app-sections>
-    <app-footer></app-footer>
+<body>
+    <main>
+        <app-header></app-header>
+        <app-sections></app-sections>
+        <app-footer></app-footer>
+        
+    </main>
 </body>
