--- a/src/app/sections/sections.component.html
+++ b/src/app/sections/sections.component.html
@@ -1,1 +1,24 @@
-<app-input></app-input>
+
+    <div class="container ">
+        
+        
+        <div class="alto-100 row d-flex justify-content-center align-items-center ">            
+            <div class="col-xxl-3 col-xl-4 col-lg-5 col-md-6 col-sm-9 col-12">
+                <div class="row">
+                    <app-input class="col-12 mb-4"></app-input>
+                    <app-grafica-mes class="col-12"></app-grafica-mes>                
+                </div>
+            </div>
+            <app-register class="col-xxl-3 col-xl-4 col-lg-5 col-md-6 col-sm-9 col-12"></app-register>
+            
+        </div>
+    </div>
+
+    <Style>        
+        @media (min-width: 730px) { 
+            
+            .alto-100{
+                height: 100vh;
+            }
+        }
+    </Style>
