--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <!-- Navbar -->
 <nav class="bg-light bottom-25 end-75 w-100">
-    <div class="text-end p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-        <p>Avatar</p>
+    <div class="text-end p-2 fondo p-2">
+        <span class="material-symbols-outlined">account_circle</span>
     </div>
+    <div class="franjaBlanca"></div>
 </nav>
-<!-- Navbar -->
