--- a/src/app/sections/grafica-mes/grafica-mes.component.html
+++ b/src/app/sections/grafica-mes/grafica-mes.component.html
@@ -1,4 +1,4 @@
-<div class="card alturaCard">
+<div class="card alturaCard FondoOscuro">
     <div class="card-body ">
         <h5 class="card-title ">Mes</h5>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti, nisi laudantium! Numquam eum eius quae dolore voluptates quod repellendus dicta veritatis necessitatibus, est ipsa deleniti esse tempore velit! Error, quia!</p>
