--- a/src/app/sections/input/input.component.html
+++ b/src/app/sections/input/input.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card FondoOscuro">
     <div class="card-body">
         <h5 class="card-title">{{nombre}}</h5>
         <form class="p-3">
@@ -12,8 +12,8 @@
             </div>
             <br>
             <div class="">
-                <button type="button" class="btn btn-success col-6 rounded-start">Ingreso</button>
-                <button type="button" class="btn btn-danger  col-6">Gasto</button>
+                <button type="button" class="btn ingresos col-6 rounded-end-0">Ingreso</button>
+                <button type="button" class="btn gastos  col-6 rounded-start-0">Gasto</button>
             </div>
         </form>
     </div>
