--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,9 +1,8 @@
 <footer class="bg-light text-center text-lg-start bottom-0 end-0 w-100">
-
-    <!-- Copyright -->
-    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+    <div class="franjaBlanca"></div>
+    
+    <div class="text-center p-3 fondo">
         
-        <a class="text-dark" href="https://github.com/animaultrix">GitHub</a>
+        <a class="textoBlanco" href="https://github.com/animaultrix">GitHub</a>
     </div>
-    <!-- Copyright -->
 </footer>
