--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,14 @@
 <head>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
-<body class="fondo">
+<body class="fondo alto-100">
     <main>
-        <app-header></app-header>
+        <app-header ></app-header>
         <app-sections></app-sections>
-        <app-footer></app-footer>
-        
+        <app-footer></app-footer>        
     </main>
 </body>
+
+
+
+
