--- a/src/app/sections/register/register.component.css
+++ b/src/app/sections/register/register.component.css
@@ -24,3 +24,10 @@
 .ingresos {
     color: #26A69A;
 }
+@media (max-width: 760px) {
+    .autoMargins {
+        margin-left: 12px;
+        margin-right: 12px;
+        margin-bottom: 24px;      
+    }
+}
