--- a/src/app/sections/register/register.component.html
+++ b/src/app/sections/register/register.component.html
@@ -1,4 +1,4 @@
-<div class="card alturaRegistro FondoOscuro">
+<div class="card alturaRegistro FondoOscuro autoMargins">
     <div class="card-body ">
         <div class="">
             <table class="table caption-top">
