--- a/src/app/sections/grafica-mes/grafica-mes.component.css
+++ b/src/app/sections/grafica-mes/grafica-mes.component.css
@@ -6,3 +6,12 @@
     background-color: #161B25; 
     color: #D1D4DC;
 }
+
+@media (max-width: 760px) {
+    .autoMargins {
+        margin-left: 12px;
+        margin-right: 12px;
+        margin-bottom: 24px;      
+    }
+}
+    
