--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,7 @@
 <!-- Navbar -->
 <nav class="bg-light bottom-25 end-75 w-100">
-    <div class="text-end p-2 fondo p-2">
+    <div class="franjaBlanca"></div>
+    <div class="text-start px-5 fondo">
         <span class="material-symbols-outlined">account_circle</span>
     </div>
     <div class="franjaBlanca"></div>
