--- a/src/app/sections/input/input.component.html
+++ b/src/app/sections/input/input.component.html
@@ -1,14 +1,13 @@
 <div class="card FondoOscuro autoMargins">
     <div class="card-body">
-        <h5 class="card-title">{{nombre}}</h5>
         <form class="p-3">
             <label for="name" class="mb-1 ">Cantidad </label>
             <div>
-                <input type="text" name="name" id="name" class="col-12 fondoInput">
+                <input type="text" name="cantidad" id="cantidad" class="col-12 fondoInput">
             </div>
             <label for="name" class=" mb-1">Concepto</label>
             <div>
-                <input type="text" name="name" id="name" class="col-12 fondoInput">
+                <input type="text" name="concepto" id="concepto" class="col-12 fondoInput">
             </div>
             <br>
             <div class="">
