--- a/src/app/sections/sections.component.html
+++ b/src/app/sections/sections.component.html
@@ -2,11 +2,11 @@
     <div class="row  justify-content-center align-items-center ">
         <div class="col-xxl-3 col-xl-4 col-lg-5 col-md-6 col-sm-9 col-12">
             <div class="row">
-                <app-input class="col-12 mb-4"></app-input>
-                <app-grafica-mes class="col-12"></app-grafica-mes>
+                <app-input class="col-12"></app-input>
+                <app-register class="col-12"></app-register>
             </div>
         </div>
-        <app-register class="col-xxl-6 col-xl-4 col-lg-5 col-md-6 col-sm-9 col-12"></app-register>
+        <app-grafica-mes class="col-xxl-8 col-xl-4 col-lg-5 col-md-6 col-sm-9 col-12" ></app-grafica-mes>                
     </div>
 </div>
 
