--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,10 +1,11 @@
 
 .fondo{
     background-color: #131722;
+    height: 7vh;
 }
 .franjaBlanca{
     background-color: #2A2E39;
-    height: 4px;
+    height: 0.5vh;
 }
 .textoBlanco{
     color: #D1D4DC;
