--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,8 +1,9 @@
 <footer class="bg-light text-center text-lg-start bottom-0 end-0 w-100">
     <div class="franjaBlanca"></div>
     
-    <div class="text-center p-3 fondo">
+    <div class="text-center fondo">
         
-        <a class="textoBlanco" href="https://github.com/animaultrix">GitHub</a>
     </div>
+
+    <div class="franjaBlanca"></div>
 </footer>
