--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -4,13 +4,14 @@
     'wght' 400,
     'GRAD' 0,
     'opsz' 48;
-    font-size: 45px;
+    font-size: 7vh;
     color: #D1D4DC;
 }
 .fondo{
     background-color: #131722;
+    height: 7vh;
 }
 .franjaBlanca{
     background-color: #2A2E39;
-    height: 4px;
+    height: 0.5vh;
 }
